# dots-web

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: config.rs  error.rs  main.rs
backend/src/auth/: access.rs  middleware.rs  mod.rs  password.rs  session.rs
backend/src/handlers/: admin.rs  auth.rs  bot.rs  contests.rs  messages.rs  mod.rs  problems.rs  solutions.rs  standings.rs  users.rs
backend/src/models/: cache.rs  contest.rs  contest_problem.rs  contest_user.rs  group.rs  language.rs  message.rs  mod.rs  problem.rs  session.rs  solution.rs  test.rs  user.rs
backend/src/services/: contest_engine.rs  file_storage.rs  import.rs  llm_gen.rs  mod.rs
backend/src/services/standings/: acm.rs  classic.rs  mod.rs
frontend/: components.json  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(admin)/: layout.tsx
frontend/src/app/(admin)/admin/: page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/: code-editor.tsx  footer.tsx  locale-toggle.tsx  nav.tsx  theme-toggle.tsx  verdict-badge.tsx
frontend/src/components/standings/: acm-standings.tsx  classic-standings.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  form-field.tsx  input.tsx  label.tsx  modal.tsx  pagination.tsx  select.tsx  spinner.tsx  table.tsx  textarea.tsx
frontend/src/lib/: auth.tsx  constants.ts  parse-problem.ts  utils.ts
frontend/src/lib/i18n/: en.json  index.ts  uk.json
frontend/src/types/: index.ts
(+34 files in other folders)
